manual: change container size to 60% (avoid overlap with toc)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@62124 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/man/grassdocs.css
+++ b/man/grassdocs.css
@@ -22,8 +22,8 @@ body{
     margin: 0 auto;
     padding-left:  10px;
     padding-right: 10px;
-#    width: 750px;
-    width: 70%;
+/*    width: 750px; */
+    width: 60%;
     background-color: white;
     height:auto !important;
     min-height: 100%;
